# gallene-sdk

./: .gitignore  README.md  pyproject.toml
galene-api/: README.md
galene-api-wrapper/: README.md  api.py  main.py  pyproject.toml
galene-api/galene/api/: __init__.py  access_token.py  client.py  exceptions.py  galene_api.py  group_service.py  models.py  twirp_client.py  user_service.py  webhook.py
galene-protocol/galene/protocol/: egress.pyi  room.pyi  sip.pyi
galene-rtc/: README.md
galene-rtc/galene/rtc/: __init__.py  data_stream.py  participant.py  signal_client.py
galene-rtc/galene/rtc/_proto/: participant_pb2.pyi
tests/: test_access_token.py  test_api.py  test_exceptions.py  test_signal_client.py
