[project]
name = "galene-sdk"
version = "0.1.0"
description = "Galene Python SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyjwt>=2.12.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "websockets>=16.0",
    "aiortc>=1.14.0",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.6",
    "python-dotenv>=1.2.2",
    "respx>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "galene-api/galene"
]
